--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
+  image_picker: ^1.1.2
+  provider: ^6.1.2
+  http: ^1.3.0
+  path: ^1.9.1
+  mime: ^2.0.0
+  http_parser: ^4.1.2
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
